# memoire-stage

./: LICENSE  README.md  biblio.bib  main.tex  pagedegarde.tex  preambule.tex  pyproject.toml  remerciements.tex
results/: generate_figures_latex.py
sections/: annexes.tex  asymptotic_eye_analysis.tex  conclusion.tex  introduction.tex  methodologie.tex  resultats.tex  theorie.tex
simulations/: asymptotic_analysis.py  asymptotic_eye_analysis.py  cyclone_globe_simulation.py  edo_methods.py  edo_results.csv  edo_simulation.py  edo_validation_cross.py  edp_simulation.py  reshape_edp_fields.py  simulation_pipeline.py  u_field.npy  utils.py  v_field.npy  validation_edo_edp.py  validation_profiles.csv  y_grid.npy
